--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,10 @@ dependencies {
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.3' // jackson_databind 10월 5일 추가
   compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
   compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
-  compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+  compile group: 'commons-logging', name: 'commons-logging', version: '1.2'`
   compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
   compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.5'
-  
+  compile group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
   
   // 개발하는 동안 라이브러리를 사용하고, 개발이 끝난 후 배치에서 제외해야 하는 라이브러리는
   // providedCompile 옵션을 사용하라!
