--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
   compile group: 'log4j', name: 'log4j', version: '1.2.17'
   compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
   testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+  compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.2.3.RELEASE'
+  compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.2.3.RELEASE'
+  
 }
 
 
