--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 ##jdbc.properties
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/teamboard?useUnicode=true&characterEncoding=UTF8
-jdbc.username=sa
-jdbc.password=teamboard
+jdbc.username=root
+jdbc.password=1111
