--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -3,3 +3,4 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/teamboard?useUnicode=true&characterEncoding=UTF8
 jdbc.username=root
 jdbc.password=1111
+#jdbc.password=didgld123!
